--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-  "C_Cpp_Runner.cCompilerPath": "C:\\MinGW\\bin\\gcc.exe",
-  "C_Cpp_Runner.cppCompilerPath": "C:\\MinGW\\bin\\g++.exe",
-  "C_Cpp_Runner.debuggerPath": "C:\\MinGW\\bin\\gdb.exe",
-  "C_Cpp_Runner.makePath": "C:\\MinGW\\bin\\make.exe",
+  "C_Cpp_Runner.cCompilerPath": "C:/MinGW/bin/gcc.exe",
+  "C_Cpp_Runner.cppCompilerPath": "C:/MinGW/bin/g++.exe",
+  "C_Cpp_Runner.debuggerPath": "C:/MinGW/bin/gdb.exe",
+  "C_Cpp_Runner.makePath": "C:/MinGW/bin/make.exe",
   "C_Cpp_Runner.warnings": [
     "-Wall",
     "-Wextra",
@@ -15,9 +15,5 @@
   "C_Cpp_Runner.cppStandard": "",
   "C_Cpp_Runner.excludeSearch": [],
   "C_Cpp_Runner.enableWarnings": true,
-  "C_Cpp_Runner.warningsAsError": false,
-  "files.associations": {
-    "time.h": "c"
-  },
-  "C_Cpp.errorSquiggles": "Disabled"
+  "C_Cpp_Runner.warningsAsError": false
 }
